# Sea_Goat_2016

./: README.md
rov_sim/: T100_thruster_dynamics.m  T200_thruster_dynamics.m  auv_6dof_sim.slx  auv_dynamics.m  auv_final_test.slx  calc_C.m  calc_D.m  calc_J.m  calc_J.m~  calc_g.m  cori_cent_calc.m  drawAircraft.m  drawSpacecraftBody.m  drawVehicle.m  forces_and_moments.m  params.m  plotStateVars.m  plotmavstatevariables.m  spacecraftVFC.m  thruster_dynamics_test.slx
rov_sim/slprj/_sfprj/EMLReport/: TAgePYQqYEGK3oh3ep2qSF.mat
vision/: README.md
vision/camera_cal/: calib_cams.mat  fixing_images.m
vision/harness_tests/camera_cal/: calibrationSession.mat
vision/harness_tests/segmentation/: CMakeLists.txt  sailencySeg.cpp
vision/harness_tests/square_det/: CMakeLists.txt  README  seagoat_vision.cpp  seagoat_vision.h  squares.cpp  squares.cpp~
vision/harness_tests/webcam/: CMakeLists.txt  CMakeLists.txt~  webcam.cpp
vision/seagoat_vision/: CMakeLists.txt  CMakeLists.txt~  test.cpp  test.cpp~
vision/seagoat_vision/include/: CMakeLists.txt  Makefile  seagoat_vision.cpp  seagoat_vision.cpp~  seagoat_vision.h  seagoat_vision.h~  segmentation.cpp  segmentation.h  segmentation.h~
